public/frontend/css/style.css
/* ... */
/* @media only screen and (max-width: 1400px) and (min-width: 768px) {
    .page_wrapper .container{
        padding: 10px 20px 0;
        margin-left: 194px !important;
    }
}
@media only screen and (max-width:1900px) and (min-width: 1400px) {
    .page_wrapper .container{
        padding: 10px 20px 0;
        margin-left: 195px !important;
    }
} */

.page_wrapper .container {
    padding: 10px 0 0 0;
    padding-left: 160px;
}

header {
    background: #e0e0e0;
    width: 100%;
    height: 50px;
    display: block;
    clear: both;
    border-bottom: 1px solid #cfd8dc;
}
.logo {
    float: left;
    height: 50px;
    padding-left: 0px;
    padding-top: 0px;
    /*width: 200px;*/
}
#search {
    float: left;
    margin-top: 5px;
    position: relative;
    width: 420px;
    box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
    overflow: hidden;
}
#search input {
    background: #fff none repeat scroll 0 0;
    /*border: 1px solid #CFD8DC;*/
    border-radius: 3px 3px 3px 3px;
    color: #90A4AE;
    font-size: 15px;
    height: 35px;
    width: 100%;
    padding: 5px 10px;
}
#search .button-search {
    background: #00695C;
    border: 1px solid #00695C;
    color: #eee;
    cursor: pointer;
    height: 35px;
    position: absolute;
    right: 0;
    top: 0;
    width: 35px;
    z-index: 55;
    border-radius: 0 3px 3px 0;
    padding: 8px;
}
#search .icon {
    color: #fff;
    font-size: 18px;
}
ul.box-manage {
    margin-right: 20px;
    float: right;
    margin-top: -5px;
}
ul.box-manage > li {
    float: left;
    position: relative;
}
ul.box-manage > li + li {
    margin-left: 10px;
}
ul.box-manage > li a {
    display: inline-block;
    height: 35px;
    /*border: 1px solid #CFD8DC;*/
    padding-left: 12px;
    padding-right: 16px;
    background: #fff;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    line-height: 23px;
    font-size: 12px;
    color: #fff;
    background: #fff;
    /*font-weight: bold;*/
}
a.especially {
    border: none !important;
    background: none !important;
    font-size: 13px !important;
    padding: 0 !important;
    color: #333;
}
.main_menu .fa {
    width: 26px;
    opacity: .99;
    display: inline-block;
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
.main_menu span.fa {
    float: right;
    text-align: center;
    margin-top: 5px;
    font-size: 10px;
    min-width: inherit;
    color: #C4CFDA;
}



.left_col {
    background: #e0e0e0;
    /*width: 200px;*/
    padding: 0px;
}

.nav-sm .container.body .col-md-3.left_col {
    min-height: 100%;
    width: 70px;
    padding: 0;
    z-index: 9999;
    position: absolute;
}

.nav-sm .container.body .col-md-3.left_col.menu_fixed {
    position: fixed;
    height: 100%;
}

.nav-sm .container.body .col-md-3.left_col .mCSB_container,
.nav-sm .container.body .col-md-3.left_col .mCustomScrollBox {
    overflow: visible;
}
.nav-md .container.body .col-md-3.left_col {
    min-height: 100%;
    width: 320px;
    padding: 0;
    position: absolute;
    display: -ms-flexbox;
    display: flex;
    z-index: 1;
}

.nav-md .container.body .col-md-3.left_col.menu_fixed {
    height: 100%;
    box-shadow: 0 0 2px 1px #888;
    -webkit-box-shadow: 0 0 3px 1px #888;
    z-index: 9;
    position: fixed;
}
.left_col .mCSB_scrollTools {
    width: 6px;
}

.left_col .mCSB_dragger {
    max-height: 400px !important;
}
.nav-fix .container.body .col-md-3.left_col {
    width: 0px;
    position: fixed;
    height: 100%;
}
.menu_section > ul > li {
    border-bottom: 1px solid #cfd8dc;
    border-right: 1px solid #cfd8dc;
}
.company_list, .warehouse_list {
    border: 1px solid #CFD8DC;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    padding: 16px 14px 16px;
    /*background-color: #fff;*/
}
.warehouse_list {
    padding: 16px 14px 30px !important;
}
.box-status {
    width: 150px;
    height: 90px;
    -ms-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
    position: absolute;
    top: -74px;
    right: -56px;
}
.box-status .status-title {
    color: #fff;
    padding-top: 66px;
    font-size: 15px;
    text-align: center;
    padding-left: 66px;
}
#tabs-container {
    overflow: hidden;
    /* background-color: #fff; */
}
.mark-tab {
    -moz-border-bottom-colors: none;
    -moz-border-left-colors: none;
    -moz-border-right-colors: none;
    -moz-border-top-colors: none;
    background-color: rgba(236, 239, 241, 0.4);
    border-bottom: 1px solid #cfd8dc;
    border-image: none;
    border-left: 1px solid #cfd8dc;
    border-right: 1px solid #cfd8dc;
    border-top: medium none !important;
    display: block;
    height: 45px;
    margin-bottom: 15px;
    position: relative;
}
.mark-tab li.current {
    background: rgba(207, 216, 220, 0.5) none repeat scroll 0 0;
    position: relative;
    z-index: 5;
    font-weight: bold;
}
.fb_iframe_widget_lift{
    position: absolute;
    right: 0 !important;
    z-index: 999;
}
.mark-tab li {
    border-right: 1px solid #cfd8dc;
    float: left;
    line-height: 45px;
    padding: 0 30px;
}

#main-profile {
    overflow: hidden;
    display: block;
    background-color: #f8f8f8;
}
#column-profile {
    float: left;
    overflow: hidden;
    width: 175px;
}
.posting-thumb figure {
    border: 1px solid #eceff1;
    border-radius: 4px;
    display: block;
    margin-bottom: 10px;
    padding-top: 90%;
    position: relative;
    width: 100%;
    cursor: pointer;
}
.posting-thumb figure span {
    align-items: center;
    display: flex;
    height: 100%;
    justify-content: center;
    left: 0;
    padding: 2px;
    position: absolute;
    text-align: center;
    top: 0;
    vertical-align: middle;
    width: 100%;
    overflow: hidden;
}
/* ... */

